--- a/_pages/demo/select的placeholder.html
+++ b/_pages/demo/select的placeholder.html
@@ -4,6 +4,8 @@ title: "select的placeholder"
 toc: true
 ---
 
+<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -19,7 +21,7 @@ toc: true
 </head>
 
 <body>
-  <p>当想给 select 加 placeholder 时，由于 HTML5 属性 placeholder 只适用于 input 和 textarea，只能退而求其次使用以下方法，使用一个 disabled 的 option 代替：</p>
+  <p>当想给 select 加 placeholder 时，由于 HTML5 属性 placeholder 只适用于 input 和 textarea，只能退而求其次使用一个 disabled 的 option 代替：</p>
   <select name="" id="">
     <option class="select-label" value="0" disabled selected>加盟类别</option>
     <option value="1">1</option>
