--- a/_pages/demo/一个简单的表单HTML.html
+++ b/_pages/demo/一个简单的表单HTML.html
@@ -1,13 +1,15 @@
 ---
-permalink: /demo/一个简单的表格HTML.html
-title: "一个简单的表格HTML"
+permalink: /demo/一个简单的表单HTML.html
+title: "一个简单的表单HTML"
 ---
+
+<!DOCTYPE html>
 
 <html lang="zh">
 
 <head>
   <meta charset="UTF-8">
-  <title>一个简单的表格HTML</title>
+  <title>一个简单的表单HTML</title>
   <style>
     .form-item {
       margin: 0 auto 20px;
