--- a/_pages/demo/块级盒的默认宽度.html
+++ b/_pages/demo/块级盒的默认宽度.html
@@ -3,6 +3,8 @@ permalink: /demo/块级盒的默认宽度.html
 title: "块级盒的默认宽度"
 ---
 
+<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -28,9 +30,9 @@ title: "块级盒的默认宽度"
 </head>
 
 <body>
-  <p>如果是静态或相对的无宽度盒子，则默认宽度是 100%，且 padding 和 border 会向内扩展。</p>
+  <p>如果是 static 或 relative 的无宽度盒子，则默认宽度是 100%，且水平方向上的 padding 和 border 会向内扩展。</p>
   <div class="div-1"></div>
-  <p>如果是绝对或浮动的无宽度盒子，则默认宽度能小则小。</p>
+  <p>如果是 absolute 或 float 的无宽度盒子，则默认宽度能小则小。</p>
   <div class="div-2"></div>
 </body>
 
