--- a/_pages/demo/index.html
+++ b/_pages/demo/index.html
@@ -28,22 +28,9 @@ title: "Demo List"
     display: inline-block;
   }
 </style>
-
+<p>可通过查看源代码了解实现方法</p>
 <ul class="demo-list">
-  <li><a target="_blank" href="/demo/一个简单的表格HTML.html">一个简单的表格 HTML</a></li>
-  <li><a target="_blank" href="/demo/标题切换动画.html">标题切换动画</a></li>
-  <li><a target="_blank" href="/demo/上传图片及时预览.html">上传图片及时预览</a></li>
-  <li><a target="_blank" href="/demo/数量选择器.html">数量选择器</a></li>
-  <li><a target="_blank" href="/demo/三栏布局.html">三栏布局</a></li>
-  <li><a target="_blank" href="/demo/清除浮动.html">清除浮动</a></li>
-  <li><a target="_blank" href="/demo/大图居中.html">大图居中</a></li>
-  <li><a target="_blank" href="/demo/transform缩放动画.html">transform 缩放动画</a></li>
-  <li><a target="_blank" href="/demo/select的placeholder.html">select 的 placeholder</a></li>
-  <li><a target="_blank" href="/demo/内联元素间隙问题.html">内联元素间隙问题</a></li>
-  <li><a target="_blank" href="/demo/透明度叠加.html">透明度叠加</a></li>
-  <li><a target="_blank" href="/demo/块级盒的默认宽度.html">块级盒的默认宽度</a></li>
-  <li><a target="_blank" href="/demo/表单submit和onsubmit.html">表单 submit 和 onsubmit</a></li>
-  <li><a target="_blank" href="/demo/表单参数.html">表单参数</a></li>
-  <li><a target="_blank" href="/demo/href中的JavaScript.html">href 中的 JavaScript</a></li>
-  <li><a target="_blank" href="/demo/多图4布局.html">多图 4 布局</a></li>
+  {% for item in site.data.demo.list %}
+  <li><a target="_blank" href="/demo/{{ item.title }}.html">{{ item.title }}</a></li>
+  {% endfor %}
 </ul>
