--- a/_pages/demo/index.html
+++ b/_pages/demo/index.html
@@ -29,8 +29,15 @@ title: "Demo List"
   }
 </style>
 <p>可通过查看源代码了解实现方法</p>
+<h2>Funny Demo</h2>
 <ul class="demo-list">
   {% for item in site.data.demo.list %}
+  <li><a target="_blank" href="/demo/{{ item.title }}.html">{{ item.title }}</a></li>
+  {% endfor %}
+</ul>
+<h2>Codewar Demo</h2>
+<ul class="demo-list">
+  {% for item in site.data.demo.codewar %}
   <li><a target="_blank" href="/demo/{{ item.title }}.html">{{ item.title }}</a></li>
   {% endfor %}
 </ul>
