feat: update data

--- a/_pages/demo/index.html
+++ b/_pages/demo/index.html
@@ -28,7 +28,7 @@ title: "Demo List"
     display: inline-block;
   }
 </style>
-<p>可通过查看源代码了解实现方法</p>
+<p>Learn implementations by viewing page source.</p>
 <h2>Funny Demo</h2>
 <ul class="demo-list">
   {% for item in site.data.demo.list %}
