feat: update demo index

--- a/_pages/demo/index.html
+++ b/_pages/demo/index.html
@@ -1,7 +1,7 @@
 ---
 layout: single
 permalink: /demo/index.html
-title: "Demo List"
+title: "Demo Camp"
 ---
 
 <style>
@@ -28,7 +28,7 @@ title: "Demo List"
     display: inline-block;
   }
 </style>
-<p>Learn implementations by viewing page source.</p>
+<p>Please learn implementations by viewing page source.</p>
 <h2>Funny Demo</h2>
 <ul class="demo-list">
   {% for item in site.data.demo.list %}
