feat: update note

--- a/_demos/funny/菜单切换动画.html
+++ b/_demos/funny/菜单切换动画.html
@@ -1,6 +1,6 @@
 ---
-permalink: /demo/标题切换动画.html
-title: "标题切换动画"
+permalink: /demo/菜单切换动画.html
+title: "菜单切换动画"
 ---
 
 <!DOCTYPE html>
@@ -15,7 +15,7 @@ title: "标题切换动画"
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>标题切换动画</title>
+  <title>菜单切换动画</title>
   <style>
     .list {
       position: relative;
@@ -51,6 +51,7 @@ title: "标题切换动画"
 </head>
 
 <body>
+  <p>点击菜单试试</p>
   <div class="list" id="J_list">
     <div class="item on">已发货</div>
     <div class="item">未发货</div>
