feat: update note and post

--- a/_pages/demo-archive.html
+++ b/_pages/demo-archive.html
@@ -31,7 +31,7 @@ title: "Demo Camp"
   }
 </style>
 
-<p>Please learn implementations by viewing page source.</p>
+<p>Learn the implementation by viewing page source.</p>
 
 <h2>Funny Demo</h2>
 <ul class="demo-list">
