--- a/_pages/news-archive.html
+++ b/_pages/news-archive.html
@@ -13,6 +13,11 @@ author_profile: false
     font-size: 0.6em;
     float: right;
   }
+  .news-item a {
+    display: inline-block;
+    max-width: 70%;
+    vertical-align: top;
+  }
 </style>
 
 <ol class="news-list">
