--- a/_pages/note-archive.html
+++ b/_pages/note-archive.html
@@ -20,26 +20,12 @@ title: "Amazing Note"
 
 <p>Find some amazing notes here.</p>
 
-<ul class="note-list">
-  <!-- 有道云或第三方笔记 -->
-  {% for note in site.data.note.notes %}
-  <li class="note-item"><a target="_blank" href="{{ note.url }}" rel="permalink">{{ note.title }}</a></li>
-  {% endfor %}
-  <!-- 本地笔记 -->
-  {% for collection in site.collections %}
-    {% for post in collection.docs %}
-      {% if collection.output == true and collection.label == "notes" %}
-        {% if post.id %}
-          {% assign title = post.title | markdownify | remove: "<p>" | remove: "</p>" %}
-        {% else %}
-          {% assign title = post.title %}
-        {% endif %}
-        {% if post.link %}
-          <li class="note-item"><a href="{{ post.link }}">{{ title }}</a><a href="{{ post.url | relative_url }}" rel="permalink"><i class="fas fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a></li>
-        {% else %}
-          <li class="note-item"><a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a></li>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
-  {% endfor %}
-</ul>
+<!-- javascript -->
+{% include note-list.html category="JavaScript" %}
+<!-- css -->
+{% include note-list.html category="CSS" %}
+<!-- html -->
+{% include note-list.html category="HTML" %}
+<!-- mixing -->
+{% include note-list.html category="Mixing" %}
+
