[chore] rename notes

--- a/_pages/note-archive.html
+++ b/_pages/note-archive.html
@@ -26,6 +26,6 @@ title: "Amazing Note"
 {% include note-list.html category="CSS" %}
 <!-- html -->
 {% include note-list.html category="HTML" %}
-<!-- mixing -->
-{% include note-list.html category="Mixing" %}
+<!-- mixin -->
+{% include note-list.html category="mixin" %}
 
