--- a/_demos/funny/menu-animation.html
+++ b/_demos/funny/menu-animation.html
@@ -7,120 +7,141 @@ title: "菜单切换动画"
 <!-- 效果：http://jsrun.net/rApKp/show -->
 <!-- 思路：https://segmentfault.com/q/1010000008613500 主要是用到 `transition` 属性 -->
 <!-- 注意：在移动端点击有 300ms 的延迟，用 `faskclick.js` 解决 -->
-  
+
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>菜单切换动画</title>
-  <style>
-    .list {
-      position: relative;
-      display: flex;
-    }
-
-    .item {
-      flex: 1;
-      background-color: #e5e5e5;
-      font-size: 1.5em;
-      text-align: center;
-      padding: 0.3em 0;
-      white-space: nowrap;
-    }
-
-    .bar {
-      position: absolute;
-      bottom: -.5em;
-      left: 0;
-      right: 66.6667%;
-      height: .5em;
-      background-color: #f60;
-    }
-
-    .bar-head {
-      transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1), left 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
-    }
-
-    .bar-tail {
-      transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, left 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-    }
-  </style>
-</head>
-
-<body>
-  <p>点击菜单试试</p>
-  <div class="list" id="J_list">
-    <div class="item on">已发货</div>
-    <div class="item">未发货</div>
-    <div class="item">全部订单</div>
-    <div class="bar bar-head"></div>
-  </div>
-</body>
-
-<script>
-  let list = document.querySelectorAll('.item');
-  let bar = document.querySelector('.bar');
-
-  for (let i = 0; i < list.length; i++) {
-
-    list[i].addEventListener('click', function () {
-
-      let that = this;
-      let nextIdx = i; // 被点击的标签索引
-      let onIdx = 0; // 当前的标签索引，默认0
-
-      // 点击当前的标签不执行
-      if (that.classList.contains('on')) {
-        return false;
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>菜单切换动画</title>
+    <style>
+      .list {
+        position: relative;
+        display: flex;
       }
 
-      let onObj = document.querySelector('.on'); // 当前的标签对象
-
-      // 获取当前的标签索引
-      for (let i = 0; i < list.length; i++) {
-        if (list[i] === onObj) {
-          onIdx = i;
-        }
+      .item {
+        flex: 1;
+        background-color: #e5e5e5;
+        font-size: 1.5em;
+        text-align: center;
+        padding: 0.3em 0;
+        white-space: nowrap;
       }
 
+      .bar {
+        position: absolute;
+        bottom: -0.5em;
+        left: 0;
+        right: 66.6667%;
+        height: 0.5em;
+        background-color: #f60;
+      }
+
+      .bar-head {
+        transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1),
+          left 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
+      }
+
+      .bar-tail {
+        transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s,
+          left 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+      }
+    </style>
+  </head>
+
+  <body>
+    <p>点击菜单试试</p>
+    <div class="list" id="J_list">
+      <div class="item on" data-index="0">已发货</div>
+      <div class="item" data-index="1">未发货</div>
+      <div class="item" data-index="2">全部订单</div>
+    </div>
+  </body>
+
+  <script>
+    /**
+     * tab 切换时的动画
+     * @param {Object} params { bar, nextIdx = 0, onIdx = 0, count = 3 }
+     */
+    function barTransition(params) {
+      // nextIdx 从 0 算起
+      const {
+        bar,
+        nextIdx = 0,
+        onIdx = 0,
+        count = 3,
+        indefinite = false,
+        tabs
+      } = params;
+      if (!bar) {
+        return;
+      }
+      if (indefinite && !tabs) {
+        return;
+      }
       // 判断动画的方向
       if (nextIdx > onIdx) {
-        bar.classList.add('bar-head');
-        bar.classList.remove('bar-tail');
+        bar.classList.add("bar-head");
+        bar.classList.remove("bar-tail");
       } else if (nextIdx < onIdx) {
-        bar.classList.add('bar-tail');
-        bar.classList.remove('bar-head');
+        bar.classList.add("bar-tail");
+        bar.classList.remove("bar-head");
       }
 
       // 标签底部条的属性
-      switch (nextIdx) {
-        case 0:
-          bar.style.left = '0%';
-          bar.style.right = '66.6667%';
-          break;
-        case 1:
-          bar.style.left = '33.3333%';
-          bar.style.right = '33.3333%';
-          break;
-        case 2:
-          bar.style.left = '66.6667%';
-          bar.style.right = '0';
-          break;
+      if (!indefinite) {
+        // tab 等长
+        const barWidth = (100 / count).toFixed(4);
+        bar.style.left = nextIdx * barWidth + "%";
+        bar.style.right = (count - nextIdx - 1) * barWidth + "%";
+      } else {
+        // tab 不等长
+        const nextTab = tabs[nextIdx];
+        if (!nextTab) {
+          return;
+        }
+        bar.style.left =
+          (
+            (nextTab.offsetLeft / nextTab.parentElement.offsetWidth) *
+            100
+          ).toFixed(4) + "%";
+        bar.style.right =
+          (
+            ((nextTab.parentElement.offsetWidth -
+              nextTab.offsetWidth -
+              nextTab.offsetLeft) /
+              nextTab.parentElement.offsetWidth) *
+            100
+          ).toFixed(4) + "%";
       }
-
-      // 清除所有选中的class
-      for (let i = 0; i < list.length; i++) {
-        list[i].classList.remove('on');
-      }
-
-      // 设置选中标签的class
-      that.classList.add('on');
-
-    }, false);
-
-  }
-</script>
-
+    }
+    function renderBar(params) {
+      const div = document.createElement("div");
+      div.classList.add("bar");
+      div.classList.add("bar-head");
+      params.barParent && params.barParent.appendChild(div);
+      return div;
+    }
+    // 使用该动画
+    const bar = renderBar({
+      barParent: document.querySelector("#J_list")
+    });
+    barTransition({
+      bar,
+      count: 3
+    });
+    document.querySelector("#J_list").addEventListener("click", e => {
+      barTransition({
+        bar,
+        nextIdx: e.target.getAttribute("data-index"),
+        onIdx: document.querySelector(".on").getAttribute("data-index"),
+        count: 3
+      });
+      document
+        .querySelectorAll(".item")
+        .forEach(item => item.classList.remove("on"));
+      e.target.classList.add("on");
+    });
+  </script>
 </html>
