[feat] update blog

--- a/_demos/funny/download.html
+++ b/_demos/funny/download.html
@@ -8,7 +8,7 @@ title: "文件下载"
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>文件下载</title>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/zhictory/taurus@master/script/createXHR.js"></script>
   </head>
   <body>
