--- a/_demos/funny/download.html
+++ b/_demos/funny/download.html
@@ -12,56 +12,77 @@ title: "文件下载"
     <script src="https://cdn.jsdelivr.net/gh/zhictory/taurus@master/script/createXHR.js"></script>
   </head>
   <body>
-    <div><input type="button" value="download" /></div>
+    <p>把异步获取到的二进制流转化为可直接下载的链接</p>
+    <p>
+      <input name="download-btn-1" type="button" value="Download by Ajax" />
+    </p>
+    <p>
+      <input
+        name="download-btn-2"
+        type="button"
+        value="Download by Native XHR"
+      />
+    </p>
     <script>
-      document.querySelector("[type=button]").addEventListener("click", () => {
-        // 两种方式获取二进制流文件
-        // 第一种 Ajax
-        $.ajax({
-          url: "http://121.36.148.99:8090/download?dir=/file/&filename=test.xlsx",
-          xhrFields: {
-            responseType: "arraybuffer", // 关键
-          },
-          success: (res, status, jqXHR) => {
-            const blob = new Blob([res], {
-              type:
-                "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
-            });
-            const objectURL = URL.createObjectURL(blob); // 关键
-            const a = document.createElement("a");
-            a.href = objectURL;
-            // a.download = jqXHR.getResponseHeader("Content-Disposition").match(/filename=(.*)/i)[1];
-            a.click();
-            URL.revokeObjectURL(objectURL);
-          },
+      // 两种方式获取二进制流文件
+      // 第一种 Ajax
+      document
+        .querySelector("[name=download-btn-1]")
+        .addEventListener("click", () => {
+          $.ajax({
+            url:
+              "http://121.36.148.99:8090/download?dir=/file/&filename=test.xlsx",
+            xhrFields: {
+              responseType: "arraybuffer", // 关键
+            },
+            success: (res, status, jqXHR) => {
+              const blob = new Blob([res], {
+                type:
+                  "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
+              });
+              const objectURL = URL.createObjectURL(blob); // 关键
+              // 使用 a 标签打开，可自定义文件名
+              const a = document.createElement("a");
+              a.href = objectURL;
+              a.download = jqXHR
+                .getResponseHeader("Content-Disposition")
+                .match(/filename=(.*)/i)[1];
+              a.click();
+              URL.revokeObjectURL(objectURL);
+            },
+          });
         });
-        // 第二种 原生实现
-        // var xhr = createXHR();
-        // xhr.onreadystatechange = function () {
-        //   if (xhr.readyState === 4) {
-        //     if ((xhr.status >= 200 && xhr.status < 300) || xhr.status === 304) {
-        //       debugger;
-        //       const blob = new Blob([xhr.response], {
-        //         type:
-        //           "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
-        //       });
-        //       const objectURL = URL.createObjectURL(blob); // 关键
-        //       const a = document.createElement("a");
-        //       a.href = objectURL;
-        //       a.download = xhr
-        //         .getResponseHeader("content-disposition")
-        //         .match(/filename=(.*)/i)[1];
-        //       a.click();
-        //       URL.revokeObjectURL(objectURL);
-        //     } else {
-        //       console.log("Request was unsuccessful" + xhr.status);
-        //     }
-        //   }
-        // };
-        // xhr.responseType = "arraybuffer";
-        // xhr.open("get", "/download?dir=\\file\\&filename=test.xlsx", true);
-        // xhr.send(null);
-      });
+      // 第二种 原生实现
+      document
+        .querySelector("[name=download-btn-2]")
+        .addEventListener("click", () => {
+          var xhr = createXHR();
+          xhr.onreadystatechange = function () {
+            if (xhr.readyState === 4) {
+              if (
+                (xhr.status >= 200 && xhr.status < 300) ||
+                xhr.status === 304
+              ) {
+                const blob = new Blob([xhr.response], {
+                  type:
+                    "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
+                });
+                const objectURL = URL.createObjectURL(blob); // 关键
+                window.open(objectURL); // 直接打开链接，无法自定义文件名
+                URL.revokeObjectURL(objectURL);
+              } else {
+                console.log("Request was unsuccessful" + xhr.status);
+              }
+            }
+          };
+          xhr.responseType = "arraybuffer";
+          xhr.open(
+            "get",
+            "http://121.36.148.99:8090/download?dir=/file/&filename=test.xlsx",
+            true
+          );
+          xhr.send(null);
+        });
     </script>
   </body>
 </html>
